Next version of ekzekuto.

--- a/host/Vagrantfile
+++ b/host/Vagrantfile
@@ -15,6 +15,6 @@ Vagrant.configure(2) do |config|
   # That's a workaround to have the docker command in the PATH
   config.vm.provision "shell", inline: "ps aux | grep 'sshd:' | awk '{print $2}' | xargs kill"
 
-  config.vm.network "forwarded_port", guest: 8080, host: 8080
-  config.vm.network "forwarded_port", guest: 9990, host: 9990
+  config.vm.network "forwarded_port", guest: 8080, host: 8080, auto_correct: true
+  config.vm.network "forwarded_port", guest: 9990, host: 9990, auto_correct: true
 end
