--- a/wildfly-latest/Vagrantfile
+++ b/wildfly-latest/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure(2) do |config|
   config.vm.provider "docker" do |docker|
-    docker.vagrant_vagrantfile = "host/Vagrantfile"
+    	docker.vagrant_vagrantfile = "../host/Vagrantfile"
 
 	docker.build_dir = "."
 
